--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
+    "netlify-cli": "^10.7.1",
     "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-animated-css": "^1.2.1",
